--- a/assets/components/footer.html
+++ b/assets/components/footer.html
@@ -9,11 +9,11 @@
 
       <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
         <li class="ms-3"><a class="text-body-secondary" href="#"><img
-              class="redes" src="assets/img/twitter.png" alt="Twitter"></a></li>
+              class="redes" src="assets/img/twitter.png" alt="Twitter" autor="Md Tanvirul Haque"></a></li>
         <li class="ms-3"><a class="text-body-secondary" href="#"><img
-              class="redes" src="assets/img/facebook.png" alt="Facebook"></a></li>
+              class="redes" src="assets/img/facebook.png" alt="Facebook" autor="Pixel perfect"></a></li>
         <li class="ms-3"><a class="text-body-secondary" href="#"><img
-              class="redes" src="assets/img/instagram.png" alt="Instagram"></a></li>
+              class="redes" src="assets/img/instagram.png" alt="Instagram" autor="Pixel perfect"></a></li>
       </ul>
     </div>
   </div>
