--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,12 @@
 html {
   box-sizing: border-box;
+  font-size: 1rem;
+  
 }
 
 body {
   background-color: rgb(191, 233, 247);
+  
 }
 
 .inicioCabecera {
@@ -73,6 +76,14 @@ nav {
 .imagen2 {
   max-width: 75%;
   max-height: 50%;
+  
+}
+
+.card {
+  align-self: center;
+  align-items: center;
+  justify-items: center;
+  justify-self: center;
 }
 
 .imagen3 {
@@ -125,10 +136,6 @@ h1 {
   margin-right: 1%;
 }
 
-.contacto {
-  background-color: purple;
-  margin-left: 40%;
-}
 
 #offcanvasNavbar2Label {
   background-color: lightblue;
@@ -145,3 +152,33 @@ h1 {
   flex-direction: column;
   align-content: flex-end;
 }
+
+.reproductor {
+  display: flex;
+  border: 2px solid blue;
+  background-color: aqua;
+  border-radius: 20%;
+  max-width: 30%;
+  min-width: 380px;
+  margin: auto;
+  padding: 10px;
+  margin-bottom: 1%;
+  justify-content: center;
+  
+}
+
+.reproductor-button {
+  border-radius: 40%;
+  max-width: 150px;
+  padding: auto;
+  margin: 5px;
+
+
+}
+
+.reproductor-img {
+  width: 1rem;
+  height: 1rem;
+
+}
+
