cambiado el link de scss

--- a/assets/SCSS/_generales.scss
+++ b/assets/SCSS/_generales.scss
@@ -34,10 +34,17 @@ body {
 
   .cartas {
     display: flex;
-    justify-items: center;
+    justify-content: space-around;
     align-items: center;
     padding-top: 2%;
     padding-bottom: 2%;
+  }
+
+  .card {
+    align-self: center;
+    align-items: center;
+    justify-items: center;
+    justify-self: center;
   }
 
   .d-block {
@@ -145,4 +152,9 @@ body {
   max-width: 250px;
   padding: 5px;
   
+}
+
+.btn-check {
+
+  color: black;
 }
