--- a/assets/SCSS/_generales.scss
+++ b/assets/SCSS/_generales.scss
@@ -99,13 +99,10 @@ body {
 
 .carousel-control {
   :hover {
-    background-color: darken($color: lightgrey, $amount: 30);
-    .carousel-control-next {
-      background-color: darken($color: lightgrey, $amount: 30);
-    }
-    .carousel-control-prev {
-      background-color: darken($color: lightgrey, $amount: 30);
-    }
+    transition: 2s;
+    $color-control : darken($color: lightblue, $amount: 20);
+    background-color: $color-control;
+
   }
 }
 
@@ -147,6 +144,7 @@ body {
 }
 
 #trans_audio {
+  border: 3px black solid;
   margin-bottom: 1%;
   border-radius: 40%;
   max-width: 250px;
@@ -154,7 +152,106 @@ body {
   
 }
 
-.btn-check {
+.horario {
+  border: 3px solid black;
+  border-radius: 20%;
+  margin-right: 10%;
+  margin-left: 10%;
+  margin-bottom: 2%;
+  
+}
 
-  color: black;
+.boton-hora {
+  background-color: lighten(lightblue, $amount: 10);
+  color:black;
+  
+}
+
+@media screen and (max-width: 640px) {
+  .offcanvasNavbar2 {
+    width: 50vh;
+    height: 100vh;
+  }
+
+  .card {
+    width: 16rem !important; 
+  }
+
+  video {
+    width: 280px;
+  }
+
+  .carousel-control-prev {
+    margin-top: 50%;
+    margin-left: 1%;
+    height: 25%;
+    width: 15%;
+    border-radius: 50%;
+    background-color: darken($color: lightgrey, $amount: 10);
+    opacity: 0.8;
+  
+    
+  }
+  
+  
+  .carousel-control-next {
+    margin-top: 50%;
+    margin-right: 1%;
+    height: 25%;
+    width: 15%;
+    border-radius: 50%;
+    background-color: darken($color: lightgrey, $amount: 10);
+    opacity: 0.8;
+  }
+
+  .reproductor {
+    display: flex;
+    border: 2px solid blue;
+    background-color: aqua;
+    border-radius: 20%;
+    max-width: 30%;
+    min-width: 250px;
+    margin: auto;
+    padding: 10px;
+    margin-bottom: 1%;
+    justify-content: center;
+    
+  }
+  
+  .reproductor-button {
+    border-radius: 40%;
+    max-width: 50px;
+    padding: auto;
+    margin: 5px;
+  
+  
+  }
+  
+  .reproductor-img {
+    width: 1rem;
+    height: 1rem;
+  
+  }
+
+  .transc {
+    display: flex;
+    border-radius: 20%;
+    max-width: 30%;
+    min-width: 200px;
+    margin: auto;
+    padding: 10px;
+    margin-bottom: 1%;
+    justify-content: center;
+    
+  }
+  
+  #trans_audio {
+    margin-bottom: 1%;
+    border-radius: 40%;
+    max-width: 250px;
+    padding: 5px;
+    
+  }
+
+
 }
